fix: add min height on table overflow to fix tooltip spamming fix: game over state

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -711,6 +711,7 @@ select, .select.dropdown-toggle {
 }
 .table-overflow {
 	max-height: 300px;
+	min-height: 200px;
 	overflow-y: scroll;
 }
 .linestable tr.headerrow{
